--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "date-fns": "^1.30.1",
     "fsevents": "^1.2.4",
+    "jest-prop-type-error": "^1.1.0",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.0",
